# narrator

./: .gitmodules  LICENSE-MIT  README.md
firmware/crates/choreographer/: Cargo.toml
firmware/crates/choreographer/src/: behaviors.rs  engine.rs  lib.rs
firmware/diegesis-fw/: Cargo.toml  README.md  playground.md
firmware/diegesis-fw/.cargo/: config.toml
firmware/diegesis-fw/src/: groundhog_nrf52.rs  lib.rs  patterns.rs  pinmap.rs  profile_ct.rs  saadc.rs  saadc_src.rs  spim_src.rs
firmware/diegesis-fw/testsuite/: Cargo.toml
firmware/diegesis-fw/testsuite/tests/: test.rs
host/dgs-speedtest/: Cargo.toml  always.sh
host/dgs-speedtest/src/: main.rs
shared/diegesis-icd/: Cargo.toml
shared/diegesis-icd/src/: lib.rs
