[package]
authors = ["James Munns <james.munns@ferrous-systems.com>"]
name = "diegesis-fw"
edition = "2018"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace]
members = ["testsuite"]

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
defmt = "0.2.0"

# TODO: switch to `defmt-usb`?
defmt-rtt = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
embedded-hal = "0.2.4"
usb-device = "0.2.7"
usbd-serial = "0.1.1"
cortex-m-rtic = "0.5.5"
generic-array = "0.14"

nb = "1.0.0"
bbqueue = "0.4.12"
heapless = "0.7.1"
embedded-dma = "0.1.2"
groundhog = "0.1.0"
smart-leds = "0.3.0"

[dependencies.serde]
version = "1.0.126"
default-features = false
features = ["derive"]

[dependencies.void]
version = "1.0.2"
default-features = false

# Vendored/Local Crates

[dependencies.nrf-smartled]
version = "0.3.0"
features = ["52840"]
path = "../vendor/nrf-smartled"

[dependencies.kolben]
version = "0.0.3"
default-features = false
path = "../vendor/kolben"

[dependencies.postcard]
path = "../vendor/postcard"

[dependencies.diegesis-icd]
path = "../../shared/diegesis-icd"
default-features = false

[dependencies.nrf52840-hal]
version = "0.12"
path = "../vendor/nrf-hal/nrf52840-hal"

[dependencies.choreographer]
path = "../crates/choreographer"

[features]
# set logging levels here
default = [
  "defmt-default",
  # "dependency-a/defmt-trace",

  # TODO: Change when everyone has a playground board
  "board-dk"
  # "board-playground"
]

board-dk = []
board-playground = []

# do NOT modify these features
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-


# [patch.crates-io]
# nrf52840-hal = { path = "../vendor/nrf-hal/nrf52840-hal" }

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
