[package]
name = "dgs-speedtest"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.kolben]
path = "../../firmware/vendor/kolben"

[dependencies.diegesis-icd]
path = "../../shared/diegesis-icd"
features = ["use-std"]

[dependencies.postcard]
path = "../../firmware/vendor/postcard"

[dependencies.serialport]
git = "https://github.com/ferrous-systems/serialport-rs-hotfix.git"
branch = "fix-usb-deprecation"
