[package]
name = "diegesis-icd"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.managed]
version = "0.8"
default-features = false

[dependencies.serde]
version = "1.0.126"
default-features = false
features = ["derive"]

[dev-dependencies.postcard]
path = "../../firmware/vendor/postcard"

[features]
default = []
use-std = ["managed/std"]
